@@ -175,6 +175,11 @@ and concurrency utilities
         <td>Asks the translator to keep Java 5 specific access modifiers.</td>
         <td>Off</td>
     </tr>
+    <tr>
+        <td nowrap><code>-uptodatecheck</code></td>
+        <td>Asks the translator to skip translation of files if the destination files are newer.</td>
+        <td>Off</td>
+    </tr>
 </table>
 <p>
     For example, if you have a Java 5 application <code>myapplication5.jar</code> you can use the following command
@@ -290,6 +295,11 @@ and concurrency utilities
     <tr>
         <td><code>retainflags</code></td>
         <td>Asks the translator to keep Java 5 specific access modifiers.</td>
+        <td>Off</td>
+    </tr>
+    <tr>
+        <td><code>uptodatecheck</code></td>
+        <td>Asks the translator to skip translation of files if the destination files are newer.</td>
         <td>Off</td>
     </tr>
     <tr>
