@@ -3,6 +3,7 @@ Retrotranslator Changelog
 
   - Limited support for java.nio.charset.Charset.defaultCharset().
   - Bug fixed: Enum static field assignment ordered wrong.
+  - New -uptodatecheck option to skip translation of files if the destination files are newer.
 
 1.2.1 (2007-02-01)
 ---------------------------------
